--- a/src/BlazorWebAssemblyApp/wwwroot/index.html
+++ b/src/BlazorWebAssemblyApp/wwwroot/index.html
@@ -8,7 +8,7 @@
     <base href="/" />
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
     <link href="bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
-    <link href="bootstrap-icons/font/bootstrap-icons.min.css" rel="stylesheet" /> />
+    <link href="bootstrap-icons/font/bootstrap-icons.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="BlazorWebAssemblyApp.styles.css" rel="stylesheet" />
